# ghost-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  main.ts  package-lock.json  package.json
convex/: apiKeys.ts  health.ts  schema.ts  subscriptions.ts  usage.ts  users.ts
convex/_generated/: api.d.ts
src-rs/: auth.rs  clerk.rs  config.rs  convex.rs  ghostscript.rs  handlers.rs  main.rs  middleware.rs  mupdf.rs  plans.rs  quota.rs  rate_limit.rs  serde_convex.rs  state.rs  stripe_api.rs  upload.rs
src/controllers/: api-process-controllers.ts  apiKey-controllers.ts  clerk-controllers.ts  health-controllers.ts  process-controllers.ts  stripe-controllers.ts  stripe-webhook-controller.ts  subscription-controllers.ts  usage-controllers.ts
src/lib/: clerkAuth.ts  convex.ts  ghostscriptQueue.ts  plans.ts  quota.ts  stripe.ts  taskQueue.ts
src/middleware/: apiKeyAuth.ts  rateLimiters.ts  syncUser.ts  trackUsage.ts
src/routes/: apiKey-routes.ts  health-routes.ts  process-routes.ts  stripe-routes.ts  subscription-routes.ts  usage-routes.ts
src/routes/api/: process-routes.ts
