[package]
name = "ghost-api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ghost-api-server"
path = "src-rs/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
hmac = "0.12"
hex = "0.4"
http = "1"
jsonwebtoken = "9"
once_cell = "1"
parking_lot = "0.12"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
